--- a/RL_learning/2.如何使用tkinter.ipynb
+++ b/RL_learning/2.如何使用tkinter.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Tkinter的使用方法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1. 标签Label和按钮Button"
    ]
   },
