强化学习代码

--- a/RL_learning/4.用tkinter实现Sarsa(lambda).ipynb
+++ b/RL_learning/4.用tkinter实现Sarsa(lambda).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sarsa利用tkinter实现\n",
+    "## Sarsa利用tkinter实现（包含Sarsa($\\lambda$)）\n",
     "### Sarsa与QLearning的对比\n",
     "初始化Q(s,a)表格，其中s是状态，a是动作<br>\n",
     "Repeat (for each eposode):<br>\n",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -321,6 +321,151 @@
    "source": [
     "比起QLearning，可以看出Sarsa更加保守，尝试过程中尽量不贴近陷阱的地带。\n",
     "![](picture3.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sarsa($\\lambda$)\n",
+    "Sarsa($\\lambda$)算法是Sarsa 的改进版，二者的主要区别在于：\n",
+    "\n",
+    "在每次选择了动作并获得reward后，Sarsa只对前一步$Q(s,a)$进行更新，Sarsa($\\lambda$) 则会对获得reward之前的所有步进行更新。<br>\n",
+    "\n",
+    "Sarsa(lambda)算法的流程如下：\n",
+    "\n",
+    "![](picture4.png)\n",
+    "\n",
+    "从上图可以看出，和Sarsa相比，Sarsa($\\lambda$)算法中多了一个矩阵E (eligibility trace)，它是用来保存在路径中所经历的每一步，因此在每次更新时也会对之前经历的步进行更新。<br>\n",
+    "\n",
+    "参数lambda取值范围为[0, 1] ，如果 lambda = 0，Sarsa($\\lambda$) 将退化为Sarsa，即只更新获取到 reward 前经历的最后一步；如果 lambda = 1，Sarsa($\\lambda$) 更新的是获取到 reward 前的所有步。$\\lambda$可理解为脚步的衰变值，即离奶酪越近的步越重要，越远的步则对于获取奶酪不是太重要。<br>\n",
+    "\n",
+    "和Sarsa相比，Sarsa($\\lambda$)算法有如下优势：<br>\n",
+    "\n",
+    "* Sarsa虽然会边走边更新，但是在没有到达terminate之前，当前步的Q值是没有任何变化的，直到达到terminate后，才会对前一步更新，而之前为了获取奖赏所走的所有步都被认为和获取奖赏没关系。Sarsa($\\lambda$)则会对获取奖赏所走的步都进行更新，离奖赏越近的步越重要，越远的则越不重要（由参数$\\lambda$控制衰减幅度）。因此，Sarsa($\\lambda$) 能够更加快速有效的学到最优的policy。\n",
+    "\n",
+    "* 在算法前几回合，探索者由于没有头绪, 可能在原地打转了很久，从而形成一些重复的环路，而这些环路对于算法的学习没有太大必要。Sarsa($\\lambda$)则可解决该问题，具体做法是：在$E(s,a)←E(s,a)+1$这一步之前，可先令E(s)=0，即把状态s对应的行置为0，这样就只保留了最近一次到达状态s时所做的action。（下图的第三行）\n",
+    "\n",
+    "\n",
+    "![](picture5.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "class RL(object):\n",
+    "    def __init__(self, action_space, learning_rate=0.01, reward_decay=0.9, e_greedy=0.9):\n",
+    "        self.actions = action_space  # a list\n",
+    "        self.lr = learning_rate\n",
+    "        self.gamma = reward_decay\n",
+    "        self.epsilon = e_greedy\n",
+    "\n",
+    "        self.q_table = pd.DataFrame(columns=self.actions, dtype=np.float64)\n",
+    "\n",
+    "    def check_state_exist(self, state):\n",
+    "        if state not in self.q_table.index:\n",
+    "            # append new state to q table\n",
+    "            self.q_table = self.q_table.append(\n",
+    "                pd.Series(\n",
+    "                    [0]*len(self.actions),\n",
+    "                    index=self.q_table.columns,\n",
+    "                    name=state,\n",
+    "                )\n",
+    "            )\n",
+    "\n",
+    "    def choose_action(self, observation):\n",
+    "        self.check_state_exist(observation)\n",
+    "        # action selection\n",
+    "        if np.random.rand() < self.epsilon:\n",
+    "            # choose best action\n",
+    "            state_action = self.q_table.loc[observation, :]\n",
+    "            # some actions may have the same value, randomly choose on in these actions\n",
+    "            action = np.random.choice(state_action[state_action == np.max(state_action)].index)\n",
+    "        else:\n",
+    "            # choose random action\n",
+    "            action = np.random.choice(self.actions)\n",
+    "        return action\n",
+    "\n",
+    "    def learn(self, *args):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "# backward eligibility traces\n",
+    "class SarsaLambdaTable(RL):\n",
+    "    def __init__(self, actions, learning_rate=0.01, reward_decay=0.9, e_greedy=0.9, trace_decay=0.9):\n",
+    "        super(SarsaLambdaTable, self).__init__(actions, learning_rate, reward_decay, e_greedy)\n",
+    "\n",
+    "        # backward view, eligibility trace.\n",
+    "        self.lambda_ = trace_decay # lamda的衰减值\n",
+    "        self.eligibility_trace = self.q_table.copy() # E矩阵记录状态中动作出现过的次数\n",
+    "\n",
+    "    def check_state_exist(self, state):\n",
+    "        if state not in self.q_table.index:\n",
+    "            # append new state to q table\n",
+    "            to_be_append = pd.Series(\n",
+    "                    [0] * len(self.actions),\n",
+    "                    index=self.q_table.columns,\n",
+    "                    name=state,\n",
+    "                )\n",
+    "            self.q_table = self.q_table.append(to_be_append)\n",
+    "\n",
+    "            # also update eligibility trace！！！\n",
+    "            self.eligibility_trace = self.eligibility_trace.append(to_be_append)\n",
+    "\n",
+    "    def learn(self, s, a, r, s_, a_):\n",
+    "        self.check_state_exist(s_)\n",
+    "        q_predict = self.q_table.loc[s, a]\n",
+    "        if s_ != 'terminal':\n",
+    "            q_target = r + self.gamma * self.q_table.loc[s_, a_]  # next state is not terminal\n",
+    "        else:\n",
+    "            q_target = r  # next state is terminal\n",
+    "        error = q_target - q_predict\n",
+    "\n",
+    "        # increase trace amount for visited state-action pair\n",
+    "\n",
+    "        # Method 1:（上图的第二行）\n",
+    "        # self.eligibility_trace.loc[s, a] += 1\n",
+    "\n",
+    "        # Method 2:（上图的第三行）\n",
+    "        self.eligibility_trace.loc[s, :] *= 0\n",
+    "        self.eligibility_trace.loc[s, a] = 1\n",
+    "\n",
+    "        # Q update\n",
+    "        self.q_table += self.lr * error * self.eligibility_trace\n",
+    "\n",
+    "        # decay eligibility trace after update\n",
+    "        self.eligibility_trace *= self.gamma*self.lambda_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "env = Maze()\n",
+    "RL = SarsaLambdaTable(actions=list(range(env.n_actions)))\n",
+    "\n",
+    "env.after(100, update)\n",
+    "env.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](picture6.gif)"
    ]
   }
  ],
